--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -6514,6 +6514,7 @@ a:hover, a:active {
   box-shadow: 3px 3px 50px rgba(0, 0, 0, 0.075);
   border-radius: 15px;
   overflow: hidden;
+  height: calc(100% - 30px);
 }
 @media only screen and (max-width: 1199px) {
   .service-item {
@@ -6556,6 +6557,11 @@ a:hover, a:active {
   font-size: 30px;
   line-height: 1.25em;
   margin-bottom: 20px;
+  text-align: center;
+}
+.service-item .title icon{
+  font-size: 70px;
+  display: block;
 }
 @media only screen and (max-width: 1366px) {
   .service-item .title {
