--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -12209,3 +12209,10 @@ code{
     display: none;
   }
 }
+
+@media only screen and (max-width: 430px) {
+  .search-wrap .btn{
+    padding-left: 7px;
+    padding-right: 12px;
+  }
+}
