--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -6564,12 +6564,12 @@ a:hover, a:active {
   display: block;
 }
 .service-item .title icon img{
-  opacity: .2;
+  opacity: .6;
   width: 40%;
   transition: all 0.4s ease;
 }
 .service-item:hover .title icon img{
-  opacity: .5;
+  opacity: 1;
 }
 @media only screen and (max-width: 1366px) {
   .service-item .title {
