--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -12254,6 +12254,26 @@ h2 span.bullet{
   margin-left: 15px;
 }
 
+p span.bullet{
+  font-weight: normal;
+  /* color: black; */
+  color: #fff;
+  font-size: 20px;
+  position: relative;
+  margin-top: 20px;
+  margin-bottom: 42px;
+  line-height: 1.3em;
+  font-family: "Hind", sans-serif;
+  background-color: #dc3545;
+  display: inline-block;
+  text-align: center;
+  padding: 10px 10px;
+  border-radius: 15px;
+  border: 5px solid #fff;
+  rotate: -5deg;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
 @media only screen and (max-width: 991px) {
   .hero-mobile{
     display: inline;
